--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,11 @@
     "compilerOptions": {
         "target": "es2016",
         "module": "commonjs",
-        "rootDir": "./",
-        "outDir": "./dist",
+        "rootDir": ".",
+        "outDir": "dist",
         "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "lib": ["esnext"],
         "types": ["node"]
     },
     "include": ["src", "prisma"],
